@startuml

class SecretWord [[java:SecretWord]] {
	-displayedWord: String
	-secretWord: String
	+SecretWord()
	+replaceChars(s: String, c: char): String
	+replaceChars(s1: String, s2: String, ch: char): void
	+getDisplayedWord(): String
	+makeGuess(charAt: char): boolean
	+getSecretWord(): String
}
class SecretWordGUI [[java:SecretWordGUI]] {
	-inputField: JTextField
	-display: JTextArea
	-inputString: String
	-secret: SecretWord
	+SecretWordGUI(title: String)
	+actionPerformed(evt: ActionEvent): void
	+{static} main(args: String[]): void
}
class SecretWord [[java:SecretWord]] {
}

class JFrame {
}

interface ActionListener {
}


ActionListener <|.. SecretWordGUI
JFrame <|-- SecretWordGUI
SecretWordGUI  *-- "1" SecretWord : contains

@enduml